# compliant_demo_project

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: hello-world.yaml
cdk.out/: DemoProjectStack.assets.json  DemoProjectStack.template.json  manifest.json  tree.json
demo_project/: demo_project_stack.py
tests/unit/: test_demo_project_stack.py
